# UAV-simulation-fork

./: .gitignore  edit_this.py  example_custom_utils.py  pyproject.toml  setup.py
aer-course-project/: config.yaml  downloadCityData.py  downloader.sh  edit_this.py  edit_this_for_mohsen.py  edit_this_for_mohsen_2.py  example_custom_utils.py  example_custom_utils_copy.py  final_project.py  getting_started.yaml  lab3_main.py  lab4.py  path_view.py  project_utils.py  readme.txt  stereo_vo_base.py  test_path1.npy  test_path2.npy  test_path3.npy  test_path_final.npy  trajectory.csv  understand_constraints.py  view_points.py  visualize_start.py
aer-course-project/Lab2/: project_utils.py
aer-course-project/Lab3/: lab3_main.py  view_points.py
aer-course-project/Lab4/: VO_T.npy  downloadCityData.py  lab4.py  lab4_main.py  readme.txt  stereo_vo_base.py
aer-course-project/Planners/: dubins_path_planning.py  dubins_path_problem.py  rrt_star_planner.py
aer-course-project/lab2_student/: lab2.yaml
aer-course-project/path_134214/: test_path0.npy  test_path1.npy  test_path10.npy  test_path11.npy  test_path12.npy  test_path15.npy  test_path18.npy  test_path2.npy  test_path3.npy  test_path4.npy  test_path5.npy  test_path6.npy  test_path7.npy  test_path8.npy  test_path9.npy
examples/cbf/: cbf_experiment.py
examples/lqr/: lqr_experiment.py
examples/mpsc/: mpsc_experiment.py
examples/pid/: pid_experiment.py
lab2/: geo_controller.py  lab2.yaml  main.py  planner.py  requirements.txt
lab2_student/: geo_controller.py  lab2.yaml  planner.py
lab3/: lab3_main.py
(+186 files in other folders)
