[tool.poetry]
name = "safe-control-gym"
version = "2.0.0"
description = "PyBullet CartPole and Quadrotor environments—with CasADi symbolic a priori dynamics—for learning-based control and RL"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
Pillow = "^9.0.0"
munch = "^2.5.0"
PyYAML = "^6.0"
imageio = "^2.14.1"
dict-deep = "^4.1.2"
scikit-optimize = "^0.9.0"
scikit-learn = "^1.3.0"
gymnasium = "^0.28"
pandas = "^1.4.0"
torch = "^1.10.2"
gpytorch = "^1.6.0"
ray = "^1.9.2"
tensorboard = "^2.12.0"
casadi = "^3.6.0"
pybullet = "^3.2.0"
cvxpy = "^1.1.18"
numpy = "^1.22.1"
Mosek = "^10.0.18"
termcolor = "^1.1.0"
rich = "^12.5.1 "
opencv-python = "^4.8.0"
opencv-contrib-python = "^4.9.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
polytope = "^0.2.5"
pytope = "^0.0.4"
gdown = "^5.1.0"
black = "^24.3.0"
isort = "^5.13.2"
scipy = "^1.12.0"
menpo = "^0.11.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
build-backend = "poetry.core.masonry.api"

